# snowrunner-telemetry-api

./: .gitignore  README.md  Untitled-1.txt  buscar_pedal.bat  fase1_comprobar.bat  fase2_comprobar.bat  pyproject.toml  pyrightconfig.json  run_agent.bat  run_api.bat  run_dashboard.bat  snowrunner-telemetry-api.code-workspace
agent/: Program.FuelDiff.cs  Program.FuelScan.cs  Program.Session.cs  Program.cs  README.md  SnowrunnerTelemetryAgent.csproj
agent/Config/: FuelPointerScanSpec.cs  OffsetsReference.cs
agent/Havok/: ActiveSampleReader.cs  FieldReader.cs  FuelModeTracker.cs  FuelPointerChainReader.cs  FuelReader.cs  FuelSessionTracker.cs  ThrottleResolver.cs  WheelTerrainReader.cs
agent/Input/: DirectInputReader.cs  PhysicalInputReader.cs  ThrottleInputMerger.cs  WinGameControllerReader.cs  WinMmJoystickReader.cs  XInputReader.cs
agent/Memory/: GameProcess.cs  ProcessMemoryReader.cs
agent/Models/: SpikeSample.cs
agent/Native/: Kernel32.cs  Psapi.cs  XInput.cs
agent/Platform/: SnowRunnerLocator.cs
agent/data/: offsets_referencia.json
docs/: ARQUITECTURA.md  CONTEXTO.md  CONTRATO-DATOS.md  INVESTIGACION-ECOSISTEMA.md  INVESTIGACION.md  README.md  RESUMEN.md  ROADMAP.md
fixtures/: README.md  ce_log_snippet.csv
scripts/: fase1_comprobar.py
src/snowrunner_telemetry_api/: __init__.py  __main__.py  config.py  csv_header.py  csv_source.py  fase1_check.py  logic.py  main.py  platform_win.py  registry.py  sample.py
src/snowrunner_telemetry_api/dashboard/: __init__.py  __main__.py  agent_source.py  app.py  chart_backend.py  metrics.py  poll.py  terrain.py
tests/: test_api.py  test_csv_parser.py  test_dashboard.py
