[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snowrunner-telemetry-api"
version = "0.0.0"
description = "API de adquisición de telemetría SnowRunner (separada del mod realista)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Fase 1 — descomentar al implementar:
    # "fastapi>=0.115",
    # "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
