[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snowrunner-telemetry-api"
version = "0.1.0"
description = "API de adquisición de telemetría SnowRunner (separada del mod realista)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
snowrunner-telemetry-api = "snowrunner_telemetry_api.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx2>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning",
]

[tool.pyright]
include = ["src", "tests", "scripts"]
extraPaths = ["src"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
